[package]
name = "toolshelf_rss"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A generic serialization/deserialization framework"
repository = "https://github.com/matthewdunsdon/toolshelf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
